# Python-Deep-Dive

./: .gitignore  CONTRIBUTING.md  README.md  my_shelf.db.bak
01_python_fundamentals/: readme.md
01_python_fundamentals/00_anatomy_of_python_programs/: readme.md
01_python_fundamentals/01_introduction_to_python/: readme.md
01_python_fundamentals/02_lines_and_indentation/: readme.md
01_python_fundamentals/03_character_sets/: readme.md
01_python_fundamentals/04_tokens/: readme.md
01_python_fundamentals/05_identifiers/: main.py  readme.md
01_python_fundamentals/06_keywords/: readme.md
01_python_fundamentals/07_operators/: bitwise-operators.md  readme.md
01_python_fundamentals/08_delimiters/: readme.md
01_python_fundamentals/09_literals/: main.py  readme.md
01_python_fundamentals/10_data_types/: main.py  readme.md
01_python_fundamentals/11_variables_as_references/: main.py  readme.md
01_python_fundamentals/12_decisions_statements/: exercise.md  readme.md
01_python_fundamentals/13_iterations/: main.py  readme.md  solutions.md
01_python_fundamentals/27_virtual_environment/: Pipfile  pyproject.toml  readme.md  requirements.txt
01_python_fundamentals/27_virtual_environment/myproject/: settings.py
01_ultimate_python_fundamentals/: readme.md
02_object_oriented_programming/: readme.md
03_data_structures/: readme.md
04_algorithms/: readme.md
05_design_patterns/: readme.md
06_advance_python_deep_dive/: readme.md
06_python_projects_for_beginners/: readme.md
07_cpython/: readme.md
The-Zen-Of-Python/: readme.md
(+806 files in other folders)
